src/main/java/oo/solid/dip/sample/good/TestDriveDaoImpl.java
package oo.solid.dip.sample.good;

import oo.solid.dip.sample.bad.TestDriveDao;

public class TestDriveDaoImpl implements EntidadeBaseDao<TestDrive>{

    @Override
    public void save(TestDrive entidade) {
        System.out.println(entidade.getDados());
        System.out.println(entidade.getEspecificacoes());
    }
}
