src/main/java/oo/solid/dip/sample/bad/TestDriveDao.java
package oo.solid.dip.sample.bad;

import oo.solid.dip.sample.good.TestDrive;

public class TestDriveDao{

    public void save(TestDrive testDrive) {
    }
}
